# redpine-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: client.rs  endpoint.rs  lib.rs  server.rs  socket.rs  timer_queue.rs  timer_wheel.rs
src/buffer/: frame.rs  mod.rs  reliable.rs  segment.rs  unreliable.rs
src/endpoint/: cc.rs  mod.rs  prio.rs  segment_rx.rs  segment_tx.rs
src/frame/: mod.rs  serial.rs
src/frame/serial/: crc.rs  mod.rs
src/server/: epoch.rs  handshake_mac.rs  mod.rs  peer.rs
tests/: connect_disconnect.rs  integration.rs  multi_client_connect_disconnect.rs  multi_client_transfer.rs  send_while_blocking.rs  single_client_connect_disconnect.rs  single_client_transfer.rs  validate_sendable.rs
tests/client_server_trial/: mod.rs
tests/common/: basic_trial.rs  mod.rs  util.rs
