[package]
name = "redpine"
version = "0.2.0"
edition = "2021"
description = "Connection-oriented UDP data transfer for real-time applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lowquark/redpine-rs" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
polling = "3.0.0"
siphasher = "1"

[dev-dependencies]
md5 = "0.7.0"
core_affinity = "0.8.1"
